objects/EUR_CRM_Criteria_Threshold__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_Criteria_Order__c</fullName>
        <label>Criteria Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Criteria_Set__c</fullName>
        <label>Criteria Set</label>
        <referenceTo>EUR_CRM_Criteria_Set__c</referenceTo>
        <relationshipName>EUR_CRM_Criteria_Thresholds</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Criteria_Type__c</fullName>
        <formula>EUR_CRM_Criteria_Set__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Criteria Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Question_English__c</fullName>
        <label>Statement (English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Question__c</fullName>
        <label>Statement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Total_Champagne_Volume__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to determine if the answer for this statement is to be copied or not to account&apos;s total champagne field</description>
        <label>Total Champagne Volume?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Total_Spirits_Volume__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to determine if the answer for this statement is to be copied or not to account&apos;s total spirit field</description>
        <label>Total Spirits Volume?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Weight__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_isChanged__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Weight Changed</label>
        <type>Checkbox</type>
    </fields>
    <label>Criteria Threshold (EU)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Criteria_Set__c</columns>
        <columns>EUR_CRM_Criteria_Type__c</columns>
        <columns>EUR_CRM_Weight__c</columns>
        <columns>EUR_CRM_isChanged__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_AT_Criteria_Threshold</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Criteria_Set__c</columns>
        <columns>EUR_CRM_Criteria_Type__c</columns>
        <columns>EUR_CRM_Sequence__c</columns>
        <columns>EUR_CRM_Question__c</columns>
        <columns>EUR_CRM_Weight__c</columns>
        <columns>EUR_CRM_Total_Champagne_Volume__c</columns>
        <columns>EUR_CRM_Total_Spirits_Volume__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Criteria_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_Criteria_Type__c</field>
            <operation>contains</operation>
            <value>AT</value>
        </filters>
        <label>All_AT_Criteria Threshold</label>
        <language>en_US</language>
        <sharedTo>
            <role>EUR_AT</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_CH_Criteria_Thresholds</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Criteria_Type__c</columns>
        <columns>EUR_CRM_Weight__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Criteria_Order__c</columns>
        <columns>EUR_CRM_Criteria_Set__c</columns>
        <columns>EUR_CRM_Sequence__c</columns>
        <columns>EUR_CRM_Question__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_Criteria_Type__c</field>
            <operation>contains</operation>
            <value>EUR_CH_</value>
        </filters>
        <label>All CH Criteria Thresholds</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_CH</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_DE_Criteria_Threshold</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Criteria_Set__c</columns>
        <columns>EUR_CRM_Criteria_Type__c</columns>
        <columns>EUR_CRM_Sequence__c</columns>
        <columns>EUR_CRM_Question__c</columns>
        <columns>EUR_CRM_Weight__c</columns>
        <columns>EUR_CRM_Total_Champagne_Volume__c</columns>
        <columns>EUR_CRM_isChanged__c</columns>
        <columns>EUR_CRM_Total_Spirits_Volume__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Criteria_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_Criteria_Type__c</field>
            <operation>contains</operation>
            <value>DE</value>
        </filters>
        <label>All_DE_Criteria Threshold</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_DK_Criteria_Threshold</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>EUR_CRM_Sequence__c</columns>
        <columns>EUR_CRM_Criteria_Set__c</columns>
        <columns>EUR_CRM_Criteria_Type__c</columns>
        <columns>EUR_CRM_Weight__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>DKK</value>
        </filters>
        <label>All DK Criteria Threshold</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_FI_Criteria_Thresholds</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Criteria_Type__c</columns>
        <columns>EUR_CRM_Weight__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Criteria_Order__c</columns>
        <columns>EUR_CRM_Criteria_Set__c</columns>
        <columns>EUR_CRM_Sequence__c</columns>
        <columns>EUR_CRM_Question__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_Criteria_Type__c</field>
            <operation>contains</operation>
            <value>EUR_FI_</value>
        </filters>
        <label>All FI Criteria Thresholds</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_MA_Criteria_Thresholds</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Criteria_Type__c</columns>
        <columns>EUR_CRM_Weight__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Criteria_Order__c</columns>
        <columns>EUR_CRM_Criteria_Set__c</columns>
        <columns>EUR_CRM_Sequence__c</columns>
        <columns>EUR_CRM_Question__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_Criteria_Type__c</field>
            <operation>contains</operation>
            <value>EUR_MA_</value>
        </filters>
        <label>All MA Criteria Thresholds</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_NG_Criteria_Thresholds</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Criteria_Type__c</columns>
        <columns>EUR_CRM_Weight__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Criteria_Order__c</columns>
        <columns>EUR_CRM_Criteria_Set__c</columns>
        <columns>EUR_CRM_Sequence__c</columns>
        <columns>EUR_CRM_Question__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_Criteria_Type__c</field>
            <operation>contains</operation>
            <value>EUR_NG_</value>
        </filters>
        <label>All NG Criteria Thresholds</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_PT_Criteria_Thresholds</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Criteria_Type__c</columns>
        <columns>EUR_CRM_Weight__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Criteria_Order__c</columns>
        <columns>EUR_CRM_Criteria_Set__c</columns>
        <columns>EUR_CRM_Sequence__c</columns>
        <columns>EUR_CRM_Question__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_Criteria_Type__c</field>
            <operation>contains</operation>
            <value>EUR_PRT_</value>
        </filters>
        <label>All PT Criteria Thresholds</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_RU_Criteria_Thresholds</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Criteria_Type__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Weight__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Criteria_Order__c</columns>
        <columns>EUR_CRM_Criteria_Set__c</columns>
        <columns>EUR_CRM_Sequence__c</columns>
        <columns>EUR_CRM_Question__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_Criteria_Type__c</field>
            <operation>startsWith</operation>
            <value>EUR_RU_</value>
        </filters>
        <label>All RU Criteria Thresholds</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_ZA_Criteria_Thresholds</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Criteria_Type__c</columns>
        <columns>EUR_CRM_Weight__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Criteria_Order__c</columns>
        <columns>EUR_CRM_Criteria_Set__c</columns>
        <columns>EUR_CRM_Sequence__c</columns>
        <columns>EUR_CRM_Question__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>EUR_CRM_Criteria_Type__c</field>
            <operation>startsWith</operation>
            <value>EUR_ZA_</value>
        </filters>
        <label>All ZA Criteria Thresholds</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_CRM_BG_All_Criteria_Threshold_View</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>EUR_CRM_Criteria_Order__c</columns>
        <columns>EUR_CRM_Criteria_Set__c</columns>
        <columns>EUR_CRM_Criteria_Type__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Sequence__c</columns>
        <columns>EUR_CRM_Question__c</columns>
        <columns>EUR_CRM_Weight__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>BGN</value>
        </filters>
        <label>EUR BG All Criteria Threshold View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BG</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CT-{0000000000}</displayFormat>
        <label>Criteria Threshold Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Criteria Threshold (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_CRM_Boolean</fullName>
        <active>true</active>
        <label>Yes/No</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_Currency_Input</fullName>
        <active>true</active>
        <label>Currency Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_Integer_Input</fullName>
        <active>true</active>
        <label>Number Input</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_Picklist</fullName>
        <active>true</active>
        <label>Picklist</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_CRM_Text_Input</fullName>
        <active>true</active>
        <description>Free text criteria</description>
        <label>Text Input</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>